# datamining

./: CNAME  Notebook.ipynb  UTS.ipynb  _images  credit_score.csv  notebooks.ipynb  pyproject.toml
.github/workflows/: codeql.yml
django_project/: models.py  views.py
django_project/static/: jquery.plugin.js  main.css  style.css
django_project/static/templates/: haiisall.html  index.html  indexprofil.html
