[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Muhammad Faisal Avicenna<avicennatutorial@gmail.com>"]
description = ""
name = "django-template"
version = "0.1.0"
[tool.poetry.dependencies]
Django = "^3.0"
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
sklearn = "^0.0.post1"
[tool.poetry.dev-dependencies]
